# mnemo

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  HOW_IT_WORKS.md  LICENSE  README.md  docker-compose.yml  mnemo.yaml
.claude/skills/mnemo/: SKILL.md
crates/mnemo-acp/: Cargo.toml
crates/mnemo-acp/src/: classifier.rs  key.rs  lib.rs
crates/mnemo-cache/: Cargo.toml
crates/mnemo-cache/src/: entry.rs  eviction.rs  l1.rs  l2.rs  l3.rs  lib.rs
crates/mnemo-intelligence/: Cargo.toml
crates/mnemo-intelligence/src/: cost.rs  embedder.rs  lib.rs  lora.rs  staleness.rs
crates/mnemo-mcp/: Cargo.toml
crates/mnemo-mcp/src/: classifier.rs  key.rs  lib.rs  schema.rs
crates/mnemo-proxy/: Cargo.toml
crates/mnemo-proxy/src/: config.rs  lib.rs  main.rs  normalize.rs  protocol.rs  proxy.rs  server.rs
crates/mnemo-proxy/tests/: integration.rs
