[workspace]
resolver = "2"
members = [
    "crates/mnemo-proxy",
    "crates/mnemo-cache",
    "crates/mnemo-intelligence",
    "crates/mnemo-mcp",
    "crates/mnemo-acp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures-core = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
shellexpand = "3"
hnsw_rs = "0.3"
parking_lot = "0.12"
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }
ort = "2.0.0-rc.12"
tokenizers = "0.21"
rand = "0.8"
