[package]
name = "mnemo-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mnemo-cache = { path = "../mnemo-cache" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
